fix js static in DTL

--- a/djangun/templates/base.html
+++ b/djangun/templates/base.html
@@ -492,12 +492,12 @@
     <!-- ===============================================-->
     <!--    JavaScripts-->
     <!-- ===============================================-->
-    <script src="vendors/@popperjs/popper.min.js"></script>
-    <script src="vendors/bootstrap/bootstrap.min.js"></script>
-    <script src="vendors/is/is.min.js"></script>
+    <script src="{% static 'js/vendors/@popperjs/popper.min.js' %}"></script>
+    <script src="{% static 'js/vendors/bootstrap/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/vendors/is/is.min.js' %}"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
-    <script src="vendors/fontawesome/all.min.js"></script>
-    <script src="assets/js/theme.js"></script>
+    <script src="{% static 'js/vendors/fontawesome/all.min.js' %}"></script>
+    <script src="{% static 'js/assets/js/theme.js' %}"></script>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800&amp;display=swap" rel="stylesheet">
   </body>
 
