--- a/djangun/templates/base.html
+++ b/djangun/templates/base.html
@@ -497,7 +497,7 @@
     <script src="{% static 'js/vendors/is/is.min.js' %}"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
     <script src="{% static 'js/vendors/fontawesome/all.min.js' %}"></script>
-    <script src="{% static 'js/assets/js/theme.js' %}"></script>
+    <script src="{% static 'js/theme.min.js' %}"></script>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800&amp;display=swap" rel="stylesheet">
   </body>
 
