--- a/djangun/templates/saloon/post.html
+++ b/djangun/templates/saloon/post.html
@@ -9,7 +9,10 @@ Djangun | 커뮤니티
 <div class="container">
   <div class="row">
     <h1>커뮤니티 살룬</h1>
-    <p>장건에 오신 여러분을 환영합니다.</p>
+    <h2>갤러리 포스트</h2>
+    <h2>{{ post.title }}</h2>
+    <p>{{ post.content }}</p>
+
   </div>
 </div>
 {% endblock content %}
