--- a/djangun/templates/pages/home.html
+++ b/djangun/templates/pages/home.html
@@ -11,7 +11,7 @@
             <div class="col-md-5 col-lg-6 order-0 order-md-1"><img class="w-100" src="{% static 'images/illustrations/hero-header.png' %}" alt="..." /></div>
             <div class="col-md-7 col-lg-6 text-md-start text-center">
               <h1 class="text-light fs-md-5 fs-lg-6 text-word-keep-all">무법자처럼 멋지게 코딩 시작</h1>
-              <p class="text-light text-word-keep-all">쉽고 빠른 All-in-one 코딩 플랫폼 </p><a class="btn btn-primary" href="#" role="button">가입 후 시작</a>
+              <p class="text-light text-word-keep-all">쉽고 빠른 All-in-one 코딩 플랫폼 </p><a class="btn btn-primary" href="{% url 'account_signup' %}" role="button">가입 후 시작</a>
             </div>
           </div>
         </div>
