--- a/djangun/templates/ranch/home.html
+++ b/djangun/templates/ranch/home.html
@@ -8,9 +8,46 @@ Djangun | 프로젝트
 {% block content %}
 <div class="container">
   <div class="row">
-    <h1>프로젝트 랜치</h1>
-    <p>프로젝트 홈페이지</p>
+    <h1>강의</h1>
+    <div style="padding:10px 0"></div>
+    <hr>
+    <h3>Colt django - 장고 입문</h3>
   </div>
+  <br>
+    <div style="padding:10px 0"></div>
+    <hr>
+    <h4>Colt Django 2. Django 프로젝트 구조 | Python Django 웹 강의</h4>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 </div>
 {% endblock content %}
 
