--- a/djangun/templates/out_base.html
+++ b/djangun/templates/out_base.html
@@ -107,13 +107,13 @@
               <h5 class="lh-lg fw-bold text-white">BIZ INFO</h5>
               <ul class="list-unstyled mb-6 mb-md-0">
                 <li class="lh-lg">
-                  <p class="text-white text-word-keep-all">바이너리스트 주식회사, 대표이사 이승주</p>
+                  <p class="text-white text-word-keep-all">장건 주식회사, 대표이사 이승주</p>
                 </li>
                 <li class="lh-lg">
-                  <p class="text-white text-word-keep-all">강원도 원주시 건강로 23 (반곡동), 303호 - 26464</p>
+                  <p class="text-white text-word-keep-all">서울특별시 동작구 상도로55길 8-3, 365스테이션 301호</p>
                 </li>
-                <li class="lh-lg"><a class="text-white" href="https://teht.hometax.go.kr/websquare/websquare.html?w2xPath=/ui/ab/a/a/UTEABAAA13.xml" target="_blank">사업자등록번호 : 406-81-65457</a></li>
-                <li class="lh-lg"><a class="text-white" href="https://ftc.go.kr/www/bizCommList.do?key=232" target="_blank">통신판매업 신고번호 : 2021-강원원주-00598</a></li>
+                <li class="lh-lg"><a class="text-white" href="https://teht.hometax.go.kr/websquare/websquare.html?w2xPath=/ui/ab/a/a/UTEABAAA13.xml" target="_blank">사업자등록번호 : 781-87-02321</a></li>
+                <li class="lh-lg"><a class="text-white" href="https://ftc.go.kr/www/bizCommList.do?key=232" target="_blank">통신판매업 신고 준비중</a></li>
               </ul>
             </div>
           </div>
